@@ -2,6 +2,8 @@
 # $Id$
 mm-dd-yy - Version 5.1.42
 
+  - Fix for Bug#83368 (24841670), 5.1.40 regression: wasNull not updated when calling getInt for a bit column.
+
   - Added static mapping for utf8mb4_ja_0900_as_cs collation.
 
   - Fix for Bug#84189 (25250938), Allow null when extracting java.time.* classes from ResultSet.
